@@ -1,5 +1,7 @@
 2008-12-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* libtiff/tiffio.h: Undeprecate toff_t and restore its use in the
+	TIFFClientOpen() callback and other external function definitions.
 	* tools/tiffinfo.c (main): Offset to EXIF IFD requires a 64-bit
 	type now.  Fixes crash when dumping files containing an EXIF IFD.
 	* m4/libtool.m4: Update to libtool 2.2.6.
